[gd_scene load_steps=2 format=3 uid="uid://c1combat_forms_view"]

[ext_resource type="Script" path="res://scripts/ui/CombatFormsView.gd" id="1_script"]

[node name="CombatFormsView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderRow" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HeaderRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Combat Forms"

[node name="Spacer" type="Control" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterSelector" type="OptionButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HeaderRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HeaderRow"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FormsList" type="ScrollContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FormsContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/FormsList"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BottomRow" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddFormButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/BottomRow"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "New Form"

[node name="DeleteConfirmDialog" type="ConfirmationDialog" parent="."]
title = "Delete Form"
initial_position = 2
size = Vector2i(300, 100)
ok_button_text = "Delete"
